# fsm-automata-editor-monitor

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  mainwindow_copy.cpp
examples/: Finite_automaton_counter.fsm.json  Float.fsm.json  TOF.fsm.json  TOF5s.fsm.json  easy.fsm.json  mycounter.fsm.json  new.fsm.json  semaphore.fsm.json  simple.fsm.json  test1.json  testing.fsm.json  valid_TOF.fsm.json  valid_TOF5s.fsm.json
src/: CMakeLists.txt  main.cpp
src/codegen/: CMakeLists.txt  main.cpp
src/codegen/templates/: automaton.cpp.tmpl  automaton.hpp.tmpl
src/core/: CMakeLists.txt  automaton.cpp  automaton.hpp  context.hpp  persistence.hpp  persistence_bridge.cpp  scheduler.hpp  script_engine.cpp  script_engine.hpp  snapshot.hpp  state.cpp  state.hpp  transition.cpp  transition.hpp  variable.cpp  variable.hpp
src/core/io/: channel.hpp  runtime_client.cpp  runtime_client.hpp  udp_channel.cpp  udp_channel.hpp
src/core_fsm/: CMakeLists.txt  automaton.cpp  automaton.hpp  context.hpp  main.cpp  persistence.hpp  persistence_bridge.cpp  script_engine.cpp  script_engine.hpp  snapshot.hpp  state.hpp  test_persistence.cpp  transition.cpp  transition.hpp  variable.cpp  variable.hpp
src/core_fsm/io_bridge/: channel.hpp  udp_channel.cpp
src/core_fsm/ui_qt/: fsmgraphicsitems.cpp  fsmgraphicsitems.hpp  gui_main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindow_core.cpp  mainwindow_editor.cpp  mainwindow_file.cpp  mainwindow_runtime.cpp  mainwindow_visualization.cpp  runtime_client.cpp  runtime_client.hpp
src/fsm_runtime/: CMakeLists.txt  runtime_main.cpp
src/gui/: CMakeLists.txt  gui_main.cpp
src/gui/graphics/: fsmgraphicsitems.cpp  fsmgraphicsitems.hpp
src/gui/mainwindow/: core.cpp  creator.cpp  editor.cpp  file.cpp  mainwindow.hpp  mainwindow.ui  runtime.cpp  visualization.cpp
src/tools/fsm_codegen/: CMakeLists.txt  main.cpp
src/tools/fsm_runtime/: CMakeLists.txt  runtime_main.cpp
